--- a/package.json
+++ b/package.json
@@ -220,7 +220,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.1.0",
+    "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.1.0",
     "@mui/styles": "^5.1.0",
     "electron-debug": "^3.2.0",
@@ -232,6 +232,7 @@
     "python-shell": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9"
   },
