--- a/package.json
+++ b/package.json
@@ -220,6 +220,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.1.0",
     "@mui/styles": "^5.1.0",
@@ -231,6 +232,7 @@
     "jss-plugin-template": "^10.8.2",
     "python-shell": "^3.0.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
