--- a/package.json
+++ b/package.json
@@ -234,6 +234,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-graph-vis": "^1.0.7",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9"
