--- a/package.json
+++ b/package.json
@@ -236,6 +236,7 @@
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.7.3",
     "react-graph-vis": "^1.0.7",
+    "react-hook-form": "^7.24.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9"
