added Python files into build configurations

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
       "node_modules",
       "package.json"
     ],
+    "extraFiles": [
+      "generator.py"
+    ],
     "afterSign": ".erb/scripts/notarize.js",
     "mac": {
       "target": {
