Revert "Added inline python shell"
This reverts commit 22ee58ec05f2ea9a2efb5a770ab733edc6de8c04.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
       "node_modules",
       "package.json"
     ],
+    "extraFiles": [
+      "generator.py"
+    ],
     "afterSign": ".erb/scripts/notarize.js",
     "mac": {
       "target": {
@@ -87,8 +90,7 @@
       "output": "release/build"
     },
     "extraResources": [
-      "./assets/**",
-      "generator.py"
+      "./assets/**"
     ],
     "publish": {
       "provider": "github",
