--- a/package.json
+++ b/package.json
@@ -243,7 +243,8 @@
     "react-hook-form": "^7.24.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "tmp": "^0.2.1"
   },
   "devEngines": {
     "node": ">=14.x",
